<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_title">Aplicativo Lista VIP Curso Android</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_name">Name</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="txt_name">Name</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de contato</string>
    <string name="txt_selecione_um_curso">Selecione um curso...</string>

</resources>