<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.ActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".applistacurso.view.MainActivity">

    <TextView
        android:id="@+id/textTituloApp"
        android:layout_width="279dp"
        android:layout_height="25dp"
        android:text="@string/txt_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneDeContato"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_salvar"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneDeContato"
        app:layout_constraintVertical_bias="0.426" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:text="@string/btn_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneDeContato"
        app:layout_constraintVertical_bias="0.339" />

    <EditText
        android:id="@+id/editTextPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_hint_primeiro_nome"
        android:inputType="text"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/textTituloApp"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/editTextSobrenome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/txt_hint_sobrenome"
        android:inputType="text"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/editTextPrimeiroNome"
        tools:layout_editor_absoluteX="47dp" />

    <EditText
        android:id="@+id/editTextNomeCursoDesejado"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/nome_do_curso_desejado"
        android:inputType="text"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/editTextSobrenome"
        tools:layout_editor_absoluteX="47dp" />

    <EditText
        android:id="@+id/editTextTelefoneDeContato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/telefone_de_contato"
        android:inputType="text"
        android:text=""
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCursoDesejado"
        tools:layout_editor_absoluteX="47dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="299dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneDeContato"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Selecione um curso:"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefoneDeContato" />

</androidx.constraintlayout.widget.ConstraintLayout>